; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_stf.c_stfmodevent.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_stf.c_stfmodevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stfname = common dso_local global i32 0, align 4
@stf_clone_match = common dso_local global i32 0, align 4
@stf_clone_create = common dso_local global i32 0, align 4
@stf_clone_destroy = common dso_local global i32 0, align 4
@stf_cloner = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @stfmodevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stfmodevent(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %18 [
    i32 129, label %9
    i32 128, label %15
  ]

9:                                                ; preds = %3
  %10 = load i32, i32* @stfname, align 4
  %11 = load i32, i32* @stf_clone_match, align 4
  %12 = load i32, i32* @stf_clone_create, align 4
  %13 = load i32, i32* @stf_clone_destroy, align 4
  %14 = call i32 @if_clone_advanced(i32 %10, i32 0, i32 %11, i32 %12, i32 %13)
  store i32 %14, i32* @stf_cloner, align 4
  br label %20

15:                                               ; preds = %3
  %16 = load i32, i32* @stf_cloner, align 4
  %17 = call i32 @if_clone_detach(i32 %16)
  br label %20

18:                                               ; preds = %3
  %19 = load i32, i32* @EOPNOTSUPP, align 4
  store i32 %19, i32* %4, align 4
  br label %21

20:                                               ; preds = %15, %9
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %20, %18
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @if_clone_advanced(i32, i32, i32, i32, i32) #1

declare dso_local i32 @if_clone_detach(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
